--- a/Spring/server/build.gradle
+++ b/Spring/server/build.gradle
@@ -50,6 +50,11 @@ dependencies {
 
 	// Gson
 	implementation 'com.google.code.gson:gson:2.8.7'
+
+	// FCM
+	implementation group: 'com.google.firebase', name: 'firebase-admin', version: '6.8.1'
+	// https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp
+	implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.2.0'
 }
 
 tasks.named('test') {
